--- a/2048改.html
+++ b/2048改.html
@@ -241,7 +241,7 @@
     </style>
 </head>
 <body style="background-color: #a4b4c0">
-<div class="lead" style="text-align: center"><h3><strong>Maded By Alex</strong></h3></div>
+<div class="lead" style="text-align: center"><h3><strong>Made by Alex</strong></h3></div>
 <p>Score:<span id="score"></span></p>
 <div id="container">
     <div id="g00" class="block"></div>
